# SynsciContextBench

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: .env.local.example  README.md  __init__.py  __main__.py  adversarial.py  benchmark_indexer.py  code_qa.py  config.py  consistency.py  context_grounding.py  create_benchmark_repo.py  dataset_loader.py  enhanced_judge.py  failure_taxonomy.py  hallucination.py  leaderboards.py  llm_judge.py  logging_config.py  metrics.py  multihop.py  runner.py  sampling.py  semantic_metrics.py  session_replay.py  statistical_analysis.py  swe_agent.py  thesis.py  validated_eval.py
benchmarks/adapters/: README.md  __init__.py  base.py  context7.py  mock.py  nia.py  synsc.py  synsc_mcp.py
benchmarks/datasets/: README.md  adversarial_test_cases.json  apps_benchmark.json  code_qa_test_cases.json  codesearchnet_benchmark.json  cosqa_benchmark.json  hallucination_test_cases.json  multihop_test_cases.json  retrieval_ground_truth.json  session_replay_cases.json  stackoverflow_qa_benchmark.json  swe_agent_test_cases.json
benchmarks/infra/: README.md  __init__.py  consistency.py  latency.py  logging_config.py
benchmarks/judges/: README.md  __init__.py  enhanced_judge.py  llm_judge.py  offline_judge.py
benchmarks/phases/: README.md  __init__.py  adversarial.py  atlas.py  code_qa.py  diff_aware.py  hallucination.py  (+6 more)
docs/: BENCHMARK_REPORT.md  METRICS.md  PHASES.md  README.md  RESULTS.md  THREATS_TO_VALIDITY.md  WHITEPAPER.md  evaluation-methodology-survey.md
scripts/: README.md  generate_charts.py  md_to_pdf.py
tests/: test_diff_aware_scoring.py  test_metrics.py  test_mock_adapter.py  test_offline_judge.py  test_session_replay_scoring.py  test_validated_eval_offline.py
(+164 files in other folders)
